# otus_hw1

./: CMakeLists.txt  README.md  config.hpp.in  main.cpp
.github/.workflow/: build.yaml
.github/workflows/: build.yaml  build.yaml.disable  cmake-multi-platform.yml.disable  release.yaml
